--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en" style="height: 100%">
   <head>
     <meta charset="utf-8" />
-    <title>We Shop</title>
+    <title>Safe The Date</title>
   </head>
-  <body style="height: inherit; margin: 0px; background-color: #f0f2f5">
+  <body style="height: inherit; margin: 0px; background-color: #1A1A1A">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" style="height: inherit"></div>
   </body>
