--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Safe The Date</title>
   </head>
-  <body style="height: inherit; margin: 0px; background-color: #1A1A1A">
+  <body style="height: inherit margin: 0px background-color: #1A1A1A">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" style="height: inherit"></div>
   </body>
